# d3-jetson-bsp

./: .editorconfig  .gitignore  .gitmodules  Makefile.am  README.md  bootstrap  configure.ac
d3-jetson-util/: .editorconfig  Makefile.am
d3-jetson-util/debian/: changelog.in  control  postinst  postrm  preinst  preinst.in  rules
d3-jetson-util/examples/: d3-16xcam-capture-display-on-grid.sh  launch-mosaic  overlay-assign  trace-enable
d3-jetson-util/scripts/: d3-build-tegra-media-api  d3-eeprom-select-cameras  d3-install-dtb  d3-patch-jp-44-jmm-api  d3-select-cameras-boot  d3-select-isp
d3-jetson-util/target-overlay/boot/extlinux/: extlinux.conf.in
d3-jetson-util/target-overlay/etc/apt/preferences.d/: hold-nvidia-repo
d3-jetson-util/target-overlay/etc/d3-jetson-utils/: nvfancontrol.conf
d3-jetson-util/target-overlay/etc/udev/rules.d/: 99-d3-rsp.rules
d3-jetson-util/target-overlay/var/nvidia/nvcam/settings/: ar0231-rcb.isp  ar0231-rgb.isp  ar0234velocity_medium.isp  ar0234velocity_narrow.isp  ar0234velocity_wide.isp  imx390.isp  imx390discovery_narrow.isp  imx390discovery_wide.isp  imx490.isp  ov10640.isp
debian-overlay/: rules
debian-overlay/pkg/image/: postinst
debian-overlay/ruleset/targets/: common.mk  image.mk
debug/: .editorconfig  build-tm-api  camera-mosaic  d3-build-tegra-media-api  disable-screen-lock  max-clocks  overlay-assign  prep-new-debug-system  test-16-launch.sh  test-4-launch.sh  test-8-launch.sh  trace-enable
doc/: .editorconfig  D3-Jetson-BSP-Release-Notes.md.in  D3-Jetson-NX-Carrier-Bringup.md  Makefile.am  README.md  Release-Notes.md.in  d3-style.latex  versioning.md
hardware/: nvidia
hardware/d3/: Makefile  README.md  d3-2xocto-cam0-3.dtsi  d3-2xocto-cam12-15.dtsi  d3-2xocto-cam4-7.dtsi  d3-2xocto-cam8-11.dtsi  d3-2xocto-cameras.dtsi  d3-6x-serdes-cam0-3.dtsi  d3-6x-serdes-cam4-5.dtsi  d3-6x-serdes-cameras-fpdlink.dtsi  d3-6x-serdes-gmsl-cameras.dtsi  d3-EXAMPLE-serdes-cam0-3.dtsi  d3-EXAMPLE-serdes-cameras-fpdlink.dtsi  d3-cam-check.dtsi  d3-cam-imx390-modes.dtsi  d3-cam-imx390-template.dtsi  d3-cam-imx390rcm-template.dtsi  d3-cam-ov10640-template.dtsi  d3-cam-reset.dtsi  d3-cic-cam0-3.dtsi  d3-cic-cam0.dtsi  d3-cic-cam2.dtsi  d3-cic-cam4-5.dtsi  d3-cic-cameras-fpdlink.dtsi  d3-cic-gmsl-cameras.dtsi  d3-config-eeprom.dtsi  d3-jetson-bsp-version.dtsi.in  d3-ncic-cam0.dtsi  d3-ncic-imx390.dts  d3-ncic-imx390rcm.dts  d3-ncic-ov10640.dts  d3-ncic.dtsi  d3-nxc-fpdlink-cam0-3.dtsi  d3-nxc-fpdlink-cam4-7.dtsi  d3-nxc-fpdlink-cam8-11.dtsi  d3-nxc-fpdlink-cameras.dtsi  d3-nxc-fpdlink.dts  d3-nxc-fpdlink.dtsi  d3-nxc-sdcard.dts  d3-nxc.dtsi  (+62 more)
hardware/d3/templated-cameras/: d3-cam-EXAMPLE-modes.dtsi  d3-cam-EXAMPLE-template.dtsi  d3-cam-ar0234-modes.dtsi  d3-cam-ar0234-template.dtsi  d3-cam-ar0820-fpdlink-template.dtsi  d3-cam-ar0820-modes.dtsi  d3-cam-ar0820-template.dtsi  d3-cam-common.dtsi  d3-cam-imx390-modes.dtsi  d3-cam-imx390-template.dtsi  d3-cam-imx390cm-template.dtsi  d3-cam-imx390cmf-template.dtsi  d3-cam-imx390rcm-template.dtsi  d3-cam-imx490-modes.dtsi  d3-cam-imx490-template.dtsi  d3-cam-imx490fpd-template.dtsi  d3-cam-ov10640-template.dtsi  d3-cam-vg6768-template.dtsi  d3-check-cam.dtsi  d3-gmsl-cam-template.dtsi  d3-overlays-cam.dtsi  d3-reset-cam.dtsi
hardware/d3/templated-deserializers/: d3-check-des.dtsi  d3-des-common.dtsi  d3-des-max9286-template.dtsi  d3-des-max9296-template.dtsi  d3-des-ub960-template.dtsi  d3-reset-des.dtsi
hardware/d3/templated-serializers/: d3-check-ser-fpdlink.dtsi  d3-check-ser-gmsl.dtsi  d3-reset-ser.dtsi  d3-ser-common.dtsi  d3-ser-max9295-template.dtsi  d3-ser-max96705-template.dtsi  d3-ser-ub953-template.dtsi
kernel/: .editorconfig  kernel-5.10
kernel/d3/: d3_defconfig
kernel/d3/drivers/: Kconfig  Makefile
kernel/d3/drivers/d3/: Kconfig  Makefile
kernel/d3/drivers/d3/ar0234/: Kconfig  Makefile  ar0234.h  ar0234_ctrl.c  ar0234_ctrl.h  ar0234_main.c  ar0234_registers.h  ar0234_tables.c  ar0234_tables.h
kernel/d3/drivers/d3/ar0820/: Kconfig  Makefile  ar0820.c  ar0820_tables.h
kernel/d3/drivers/d3/build-id/: Kconfig  Makefile  build-id.c
kernel/d3/drivers/d3/config-eeprom/: Kconfig  Makefile  _kernel.h  config-eeprom.c  omelette-decode-internal.h  omelette-decode.c  omelette-decode.h
kernel/d3/drivers/d3/d3fixedpt/: Kconfig  Makefile  clzsi2.c  d3fixedpt.c  int_lib.h  int_types.h  int_util.c  udivmodti4.c
kernel/d3/drivers/d3/early-at24/: Kconfig  Makefile  modify-at24.sed
kernel/d3/drivers/d3/imx390/: Kconfig  Makefile  imx390-main.c  imx390-mode-1936x1096-HDR.c  imx390-mode-1936x1096-HDR.h  imx390-mode-1936x1096-SP1H.c  imx390-mode-1936x1096-SP1H.h  imx390-mode-1936x1096-SP1L.c  imx390-mode-1936x1096-SP1L.h  imx390-mode-1936x1096-SP2.c  imx390-mode-1936x1096-SP2.h  imx390-mode-1936x1100-HDR.c  imx390-mode-1936x1100-HDR.h  imx390-mode-1936x1100-SP1H-2LANE.c  imx390-mode-1936x1100-SP1H-2LANE.h  imx390-mode-1936x1100-SP1H.c  imx390-mode-1936x1100-SP1H.h  imx390-mode-1936x1100-SP1L-2LANE.c  imx390-mode-1936x1100-SP1L-2LANE.h  imx390-mode-1936x1100-SP1L.c  imx390-mode-1936x1100-SP1L.h  imx390-mode-1936x1100-SP2-2LANE.c  imx390-mode-1936x1100-SP2-2LANE.h  imx390-mode-1936x1100-SP2.c  imx390-mode-1936x1100-SP2.h  imx390-modes.c  imx390-modes.h
kernel/d3/drivers/d3/imx490/: Kconfig  Makefile  cam_rw.c  cam_rw.h  imx490-mode-2880x1860-hdr-es4.h  imx490-mode-2880x1860-linear-es4.h  imx490-mode-2880x1860-linear.h  imx490.h  imx490_ctrls.c  imx490_ctrls.h  imx490_main.c  imx490_modes.c  imx490_modes.h  reg_ctl.h
kernel/d3/drivers/d3/max9296/: Kconfig  Makefile  max9286.c  max9286.h  max9295.c  (+11 more)
kernel/d3/include/d3/: common.h  config-eeprom.h  d3-jetson-bsp.h.in  fixedpt.h  fixedptc.h  of_private.h  reg_ctl.h  reg_tbl.h  ub953.h  ub960.h
kernel/d3/lib/: Kconfig  Makefile
kernel/d3/lib/camera_register_access/: Makefile  reg_ctl.c  reg_tbl.c
mk/: README.md  single_module.mk
scripts/host/: jdec2bin.py  jetson-tui-cfg.sh
supplemental/: README.md  install-example.in
supplemental/xavier-nx-flash-config/: d3-nxc-emmc.conf  d3-nxc-sdcard.conf
tests/: install-unity.sh
(+39 files in other folders)
